Created page with "* [[Image:Fasteners_ASMEB18.2.2.4B.svg|32px]] '''ASME B18.2.2.4B''' UNC-Sechskant-Flachmutter."

--- a/wiki/de/Fasteners_Workbench.html
+++ b/wiki/de/Fasteners_Workbench.html
@@ -247,9 +247,7 @@
 </div>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.2.2.2.svg&amp;filetimestamp=20230312162308&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.2.2.2.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME 18.2.2.2</b> UNC-Vierkantmutter.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.2.2.1A.svg&amp;filetimestamp=20210815113040&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.2.2.1A.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.2.2.4A</b> UNC-Sechskantmutter.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.2.2.4B.svg&amp;filetimestamp=20210815113126&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.2.2.4B.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.2.2.4B</b> UNC hexagon thin nut.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.2.2.4B.svg&amp;filetimestamp=20210815113126&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.2.2.4B.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.2.2.4B</b> UNC-Sechskant-Flachmutter.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.2.2.5.svg&amp;filetimestamp=20230312162333&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.2.2.5.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME 18.2.2.5</b> UNC hexagon castle nut.</li></ul>
 </div>
@@ -437,13 +435,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112131600
+Cached time: 20260112131627
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.401 seconds
-Real time usage: 0.543 seconds
-Preprocessor visited node count: 710/1000000
+CPU time usage: 0.441 seconds
+Real time usage: 0.604 seconds
+Preprocessor visited node count: 709/1000000
 Post&#8208;expand include size: 7106/2097152 bytes
 Template argument size: 1357/2097152 bytes
 Highest expansion depth: 8/100
@@ -453,19 +451,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.360      1 -total
- 26.21%    8.218      1 Template:Fasteners_Tools_navi/de
- 16.75%    5.254      7 Template:PropertyData/de
- 13.92%    4.364      1 Template:VersionPlus/de
- 10.39%    3.259      7 Template:MenuCommand
-  9.05%    2.837      1 Template:Navigation_menu_2
-  8.71%    2.732      2 Template:Caption
-  7.85%    2.463      1 Template:TRUE
-  7.68%    2.409      7 Template:Variable
-  6.52%    2.044      1 Template:Button
+100.00%   25.905      1 -total
+ 28.45%    7.370      1 Template:Fasteners_Tools_navi/de
+ 24.25%    6.283      7 Template:PropertyData/de
+ 10.28%    2.662      7 Template:Variable
+  9.64%    2.498      1 Template:Navigation_menu_2
+  7.79%    2.019      1 Template:VersionPlus/de
+  7.78%    2.015      7 Template:MenuCommand
+  7.46%    1.932      2 Template:Caption
+  7.06%    1.828      1 Template:TOCright
+  5.93%    1.537      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260112131559 and revision id 1737517. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260112131626 and revision id 1737519. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
