--- a/wiki/de/Fasteners_Workbench.html
+++ b/wiki/de/Fasteners_Workbench.html
@@ -248,9 +248,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.2.2.2.svg&amp;filetimestamp=20230312162308&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.2.2.2.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME 18.2.2.2</b> UNC-Vierkantmutter.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.2.2.1A.svg&amp;filetimestamp=20210815113040&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.2.2.1A.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.2.2.4A</b> UNC-Sechskantmutter.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.2.2.4B.svg&amp;filetimestamp=20210815113126&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.2.2.4B.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.2.2.4B</b> UNC-Sechskant-Flachmutter.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.2.2.5.svg&amp;filetimestamp=20230312162333&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.2.2.5.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME 18.2.2.5</b> UNC hexagon castle nut.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.2.2.5.svg&amp;filetimestamp=20230312162333&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.2.2.5.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME 18.2.2.5</b> UNC-Sechskant-Kronenmutter.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.2.2.12.svg&amp;filetimestamp=20230312162210&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.2.2.12.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME 18.2.2.12</b> UNC-Sechskantmutter mit Flansch.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.2.2.13.svg&amp;filetimestamp=20240106165243&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.2.2.13.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME 18.2.2.13</b> UNC hexagon coupling nut.</li></ul>
@@ -433,13 +431,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112131920
+Cached time: 20260112132053
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.440 seconds
-Real time usage: 0.694 seconds
-Preprocessor visited node count: 708/1000000
+CPU time usage: 0.442 seconds
+Real time usage: 0.763 seconds
+Preprocessor visited node count: 707/1000000
 Post&#8208;expand include size: 7106/2097152 bytes
 Template argument size: 1357/2097152 bytes
 Highest expansion depth: 8/100
@@ -449,19 +447,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.246      1 -total
- 32.81%   15.831      1 Template:TRUE
- 22.07%   10.647      1 Template:Fasteners_Tools_navi/de
- 13.38%    6.457      7 Template:PropertyData/de
-  7.47%    3.603      7 Template:MenuCommand
-  6.54%    3.156      7 Template:Variable
-  5.89%    2.843      1 Template:VersionPlus/de
-  5.60%    2.700      2 Template:Caption
-  5.23%    2.525      1 Template:TOCright
-  4.91%    2.371      1 Template:Navigation_menu_2
+100.00%   32.475      1 -total
+ 42.64%   13.847      1 Template:Fasteners_Tools_navi/de
+ 20.62%    6.696      7 Template:PropertyData/de
+ 16.60%    5.392      1 Template:Navigation_menu_2
+ 12.32%    4.001      7 Template:Variable
+  7.47%    2.425      1 Template:VersionPlus/de
+  6.88%    2.234      7 Template:MenuCommand
+  5.16%    1.677      1 Template:TRUE
+  4.78%    1.553      2 Template:Caption
+  4.60%    1.495      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260112131920 and revision id 1737521. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260112132052 and revision id 1737523. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
