Created page with "* Převeďme díl Lego, který jsme vytvořili v minulé kapitole, do sítě STL. Geometrii lze stáhnout na konci uvedené kapitoly. * Otevřete soubor FreeCADu obsahující díl Lega. * Přepněte na [[Mesh_Workbench|Mesh Workbench]] * Vyberte kostku lega * Vyberte menu '''Sítě → Vytvořit síť z tvaru''' * Otevře se panel úkolů s několika možnostmi. Některé další algoritmy pro vytváření sítí (Mefisto nebo Netgen) nemusí být k dispozici, v závislo..."

--- a/wiki/cs/Manual;Preparing_models_for_3D_printing.html
+++ b/wiki/cs/Manual;Preparing_models_for_3D_printing.html
@@ -91,12 +91,12 @@
 </p><p>Na&scaron;t&#283;st&iacute; je p&#345;evod pevn&eacute;ho objektu na s&iacute;&#357; ve FreeCADu velmi jednoduch&yacute;, i kdy&#382; p&#345;evod s&iacute;t&#283; zp&#283;t na pevn&yacute; objekt je slo&#382;it&#283;j&scaron;&iacute; operace. B&#283;hem procesu p&#345;evodu je d&#367;le&#382;it&eacute; m&iacute;t na pam&#283;ti, &#382;e m&#367;&#382;e doj&iacute;t k ur&#269;it&eacute;mu sn&iacute;&#382;en&iacute; kvality modelu, zejm&eacute;na p&#345;i redukci slo&#382;it&eacute; geometrie na jednoduchou troj&uacute;heln&iacute;kovou s&iacute;&#357;. Mus&iacute;te zajistit, aby toto sn&iacute;&#382;en&iacute; kvality z&#367;stalo v p&#345;ijateln&yacute;ch mez&iacute;ch, aby byla zachov&aacute;na p&#345;esnost ti&scaron;t&#283;n&eacute;ho objektu.
 </p><p>In FreeCAD, the <a href="../Mesh_Workbench.html" title="Mesh Workbench">Mesh Workbench</a> handles all mesh-related tasks. This workbench contains tools not only for converting between Part and Mesh objects but also for analyzing and repairing meshes. While mesh manipulation isn&rsquo;t the primary focus of FreeCAD, it becomes essential when preparing models for 3D printing. Mesh objects are widely used in other applications, and the Mesh Workbench allows you to fully manage and adjust these objects, ensuring they are ready for the next step in the printing process.
 </p>
-<ul><li>Let's convert the Lego piece we created in the last chapter into an STL mesh. The geometry can be downloaded at the end of said chapter.</li>
-<li>Open the FreeCAD file containing the Lego piece.</li>
-<li>Switch to the <a href="../Mesh_Workbench.html" title="Mesh Workbench">Mesh Workbench</a></li>
-<li>Select the Lego brick</li>
-<li>Select menu <b>Meshes &rarr; Create Mesh from Shape</b></li>
-<li>A task panel will open with several options. Some additional meshing algorithms (Mefisto or Netgen) might not be available, depending on how your version of FreeCAD was compiled. The Standard meshing algorithm will always be present. It offers fewer possibilities than the two others, but is totally sufficient for small objects that fit into the maximum print size of a 3D printer.</li></ul>
+<ul><li>P&#345;eve&#271;me d&iacute;l Lego, kter&yacute; jsme vytvo&#345;ili v minul&eacute; kapitole, do s&iacute;t&#283; STL. Geometrii lze st&aacute;hnout na konci uveden&eacute; kapitoly.</li>
+<li>Otev&#345;ete soubor FreeCADu obsahuj&iacute;c&iacute; d&iacute;l Lega.</li>
+<li>P&#345;epn&#283;te na <a href="../Mesh_Workbench.html" title="Mesh Workbench">Mesh Workbench</a></li>
+<li>Vyberte kostku lega</li>
+<li>Vyberte menu <b>S&iacute;t&#283; &rarr; Vytvo&#345;it s&iacute;&#357; z tvaru</b></li>
+<li>Otev&#345;e se panel &uacute;kol&#367; s n&#283;kolika mo&#382;nostmi. N&#283;kter&eacute; dal&scaron;&iacute; algoritmy pro vytv&aacute;&#345;en&iacute; s&iacute;t&iacute; (Mefisto nebo Netgen) nemus&iacute; b&yacute;t k dispozici, v z&aacute;vislosti na tom, jak byla zkompilov&aacute;na va&scaron;e verze FreeCADu. Algoritmus Standardn&iacute; s&iacute;&#357; bude v&#382;dy k dispozici. Nab&iacute;z&iacute; m&eacute;n&#283; mo&#382;nost&iacute; ne&#382; ostatn&iacute; dva, ale je zcela dosta&#269;uj&iacute;c&iacute; pro mal&eacute; objekty, kter&eacute; se vejdou do maxim&aacute;ln&iacute; velikosti tisku 3D tisk&aacute;rny.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_MeshLego.png&amp;filetimestamp=20240930155550&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_MeshLego.png" decoding="async" width="1012" height="554" class="mw-file-element" data-file-width="1012" data-file-height="554"></a></span>
 </p>
 <ul><li>Select the <b>Standard</b> mesher, and leave the deviation value to the default value of <b>0.10</b>. Press <b>Ok</b>.</li>
@@ -177,12 +177,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112131313
+Cached time: 20260112133805
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.137 seconds
+CPU time usage: 0.090 seconds
+Real time usage: 0.212 seconds
 Preprocessor visited node count: 123/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 776/2097152 bytes
@@ -193,13 +193,13 @@ Unstrip post&#8208;expand size: 2981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.064      1 -total
- 69.55%    6.304      1 Template:Manual:TOC
- 51.68%    4.684      1 Manual:Summary/cs
- 24.83%    2.251      2 Template:Docnav
+100.00%   13.517      1 -total
+ 68.60%    9.273      1 Template:Manual:TOC
+ 48.08%    6.499      1 Manual:Summary/cs
+ 24.63%    3.329      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112131313 and revision id 1737511. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112133804 and revision id 1737525. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
