Created page with "* Vyberte '''Standardní''' nástroj sítě a ponechte hodnotu odchylky na výchozí hodnotě '''0.10'''. Stiskněte '''Ok'''. * Bude vytvořen síťový objekt, přesně nad naším pevným objektem. Skryjte pevný objekt nebo jeden z objektů přesuňte stranou, abyste mohli oba objekty porovnat. * Změňte vlastnost '''Zobrazení → Režim zobrazení''' nového objektu sítě na '''Ploché linie''', abyste viděli, jak došlo k triangulaci. * Pokud nejste spokojeni a..."

--- a/wiki/cs/Manual;Preparing_models_for_3D_printing.html
+++ b/wiki/cs/Manual;Preparing_models_for_3D_printing.html
@@ -99,10 +99,10 @@
 <li>Otev&#345;e se panel &uacute;kol&#367; s n&#283;kolika mo&#382;nostmi. N&#283;kter&eacute; dal&scaron;&iacute; algoritmy pro vytv&aacute;&#345;en&iacute; s&iacute;t&iacute; (Mefisto nebo Netgen) nemus&iacute; b&yacute;t k dispozici, v z&aacute;vislosti na tom, jak byla zkompilov&aacute;na va&scaron;e verze FreeCADu. Algoritmus Standardn&iacute; s&iacute;&#357; bude v&#382;dy k dispozici. Nab&iacute;z&iacute; m&eacute;n&#283; mo&#382;nost&iacute; ne&#382; ostatn&iacute; dva, ale je zcela dosta&#269;uj&iacute;c&iacute; pro mal&eacute; objekty, kter&eacute; se vejdou do maxim&aacute;ln&iacute; velikosti tisku 3D tisk&aacute;rny.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_MeshLego.png&amp;filetimestamp=20240930155550&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_MeshLego.png" decoding="async" width="1012" height="554" class="mw-file-element" data-file-width="1012" data-file-height="554"></a></span>
 </p>
-<ul><li>Select the <b>Standard</b> mesher, and leave the deviation value to the default value of <b>0.10</b>. Press <b>Ok</b>.</li>
-<li>A mesh object will be created, exactly on top of our solid object. Either hide the solid or move one of the objects aside, so you can compare both.</li>
-<li>Change the <b>View &rarr; Display Mode</b> property of the new mesh object to <b>Flat Lines</b>, in order to see how the triangulation occurred.</li>
-<li>If you are not happy, and think that the result is too coarse, you can repeat the operation, lowering the deviation value. In the example below, the left mesh used the default value of <b>0.10</b>, while the right one uses <b>0.01</b>:</li></ul>
+<ul><li>Vyberte <b>Standardn&iacute;</b> n&aacute;stroj s&iacute;t&#283; a ponechte hodnotu odchylky na v&yacute;choz&iacute; hodnot&#283; <b>0.10</b>. Stiskn&#283;te <b>Ok</b>.</li>
+<li>Bude vytvo&#345;en s&iacute;&#357;ov&yacute; objekt, p&#345;esn&#283; nad na&scaron;&iacute;m pevn&yacute;m objektem. Skryjte pevn&yacute; objekt nebo jeden z objekt&#367; p&#345;esu&#328;te stranou, abyste mohli oba objekty porovnat.</li>
+<li>Zm&#283;&#328;te vlastnost <b>Zobrazen&iacute; &rarr; Re&#382;im zobrazen&iacute;</b> nov&eacute;ho objektu s&iacute;t&#283; na <b>Ploch&eacute; linie</b>, abyste vid&#283;li, jak do&scaron;lo k triangulaci.</li>
+<li>Pokud nejste spokojeni a mysl&iacute;te si, &#382;e v&yacute;sledek je p&#345;&iacute;li&scaron; hrub&yacute;, m&#367;&#382;ete operaci opakovat a sn&iacute;&#382;it hodnotu odchylky. V n&iacute;&#382;e uveden&eacute;m p&#345;&iacute;kladu byla v lev&eacute; s&iacute;ti pou&#382;ita v&yacute;choz&iacute; hodnota <b>0.10</b>, zat&iacute;mco v prav&eacute; s&iacute;ti byla pou&#382;ita hodnota <b>0.01</b>:</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Exercise_meshing_02.jpg&amp;filetimestamp=20160109214026&amp;.html" class="mw-file-description"><img src="../File/Exercise_meshing_02.jpg" decoding="async" width="1179" height="703" class="mw-file-element" data-file-width="1179" data-file-height="703"></a></span>
 </p><p>In most cases, though, the default values will give a satisfying result.
 </p>
@@ -177,12 +177,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112133813
+Cached time: 20260112135827
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.239 seconds
+CPU time usage: 0.098 seconds
+Real time usage: 0.458 seconds
 Preprocessor visited node count: 123/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 776/2097152 bytes
@@ -193,13 +193,13 @@ Unstrip post&#8208;expand size: 2981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.559      1 -total
- 78.43%   11.419      1 Template:Manual:TOC
- 63.42%    9.233      1 Manual:Summary/cs
- 18.09%    2.634      2 Template:Docnav
+100.00%   36.948      1 -total
+ 66.69%   24.640      1 Template:Manual:TOC
+ 32.72%   12.090      1 Manual:Summary/cs
+ 20.31%    7.503      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112133813 and revision id 1737525. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112135826 and revision id 1737530. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
