--- a/wiki/cs/Manual;Preparing_models_for_3D_printing.html
+++ b/wiki/cs/Manual;Preparing_models_for_3D_printing.html
@@ -104,7 +104,7 @@
 <li>Zm&#283;&#328;te vlastnost <b>Zobrazen&iacute; &rarr; Re&#382;im zobrazen&iacute;</b> nov&eacute;ho objektu s&iacute;t&#283; na <b>Ploch&eacute; linie</b>, abyste vid&#283;li, jak do&scaron;lo k triangulaci.</li>
 <li>Pokud nejste spokojeni a mysl&iacute;te si, &#382;e v&yacute;sledek je p&#345;&iacute;li&scaron; hrub&yacute;, m&#367;&#382;ete operaci opakovat a sn&iacute;&#382;it hodnotu odchylky. V n&iacute;&#382;e uveden&eacute;m p&#345;&iacute;kladu byla v lev&eacute; s&iacute;ti pou&#382;ita v&yacute;choz&iacute; hodnota <b>0.10</b>, zat&iacute;mco v prav&eacute; s&iacute;ti byla pou&#382;ita hodnota <b>0.01</b>:</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Exercise_meshing_02.jpg&amp;filetimestamp=20160109214026&amp;.html" class="mw-file-description"><img src="../File/Exercise_meshing_02.jpg" decoding="async" width="1179" height="703" class="mw-file-element" data-file-width="1179" data-file-height="703"></a></span>
-</p><p>In most cases, though, the default values will give a satisfying result.
+</p><p>Ve v&#283;t&scaron;in&#283; p&#345;&iacute;pad&#367; v&scaron;ak v&yacute;choz&iacute; hodnoty poskytnou uspokojiv&yacute; v&yacute;sledek.
 </p>
 <ul><li>We can now export our mesh to a mesh format, such as <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/STL_%28file_format%29">STL</a>, which is currently the most widely used format in 3D printing, by using menu <b>File &rarr; Export</b> and choosing the STL file format.</li></ul>
 <p>In FreeCAD, the Mesh Workbench provides several algorithms for converting a solid model into a mesh, including Standard, Mefisto, Netgen, and Gmsh. The Standard algorithm is commonly used for small to medium-sized objects as it provides a balance between speed and mesh quality. When creating a mesh, two critical parameters are the surface deviation and angular deviation. Surface deviation controls how closely the mesh follows the original geometry, with smaller values providing a finer, more accurate mesh but potentially leading to larger file sizes. Angular deviation defines how much deviation is allowed based on changes in the model's angles, particularly for curves and sharp edges. Other options like relative surface deviation allow you to adjust the precision dynamically based on the model's scale, and features like applying face colors or defining mesh segments by color are useful for advanced rendering or grouping different regions of the model. Once the mesh is generated, it can be exported in formats like STL, OBJ, or 3MF, which are essential for preparing models for 3D printing. Mesh quality is crucial for ensuring that 3D printers interpret the model correctly, so selecting the right meshing algorithm and deviation settings can significantly affect the final print outcome.
@@ -177,12 +177,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112140104
+Cached time: 20260112140138
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.155 seconds
+CPU time usage: 0.094 seconds
+Real time usage: 0.156 seconds
 Preprocessor visited node count: 123/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 776/2097152 bytes
@@ -193,13 +193,13 @@ Unstrip post&#8208;expand size: 2981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.191      1 -total
- 71.20%    8.680      1 Template:Manual:TOC
- 55.22%    6.732      1 Manual:Summary/cs
- 24.10%    2.938      2 Template:Docnav
+100.00%   10.772      1 -total
+ 71.07%    7.656      1 Template:Manual:TOC
+ 54.24%    5.843      1 Manual:Summary/cs
+ 25.63%    2.761      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112140104 and revision id 1737530. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112140138 and revision id 1737533. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
