--- a/wiki/bg/Online_Help_Toc.html
+++ b/wiki/bg/Online_Help_Toc.html
@@ -42,8 +42,7 @@
 <li><a href="../Navigation_Cube.html" title="Navigation Cube">The navigation cube</a></li>
 <li><a href="../Document_structure.html" title="Document structure">The FreeCAD document</a></li>
 <li><a href="../Property_View.html" title="Property View">Property View</a></li></ul></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>The <a href="../Workbenches.html" title="Workbenches">Workbenches</a>
+<ul><li>&#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080; <a href="../Workbenches.html" title="Workbenches">Workbenches</a>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Standard tools for all Workbenches</a></li>
 <li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Assembly_Workbench.html" title="Assembly Workbench">The Assembly Workbench</a> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>)</li>
 <li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Workbench.html" title="BIM Workbench">The BIM Workbench</a> (combines the Arch Workbench and external BIM Workbench available in <span style="font-size:small;color:blue;">0.21 and below</span>)</li>
@@ -65,7 +64,6 @@
 <li><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">The Techdraw Workbench</a></li>
 <li><span typeof="mw:File"><a href="../index.php?title=Workbench_Test.svg&amp;filetimestamp=20200404174253&amp;.html" class="mw-file-description"><img src="../File/Workbench_Test.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Testing.html" title="Testing">The Test Framework Workbench</a></li>
 <li><a href="../External_workbenches.html" title="External workbenches">External workbenches</a></li></ul></li></ul>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><a href="../List_of_Commands.html" class="mw-redirect" title="List of Commands">List of FreeCAD commands</a></li></ul>
 </div>
@@ -154,13 +152,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112165005
+Cached time: 20260112165421
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.103 seconds
-Real time usage: 0.371 seconds
-Preprocessor visited node count: 104/1000000
+CPU time usage: 0.085 seconds
+Real time usage: 0.140 seconds
+Preprocessor visited node count: 103/1000000
 Post&#8208;expand include size: 5936/2097152 bytes
 Template argument size: 1925/2097152 bytes
 Highest expansion depth: 5/100
@@ -170,14 +168,14 @@ Unstrip post&#8208;expand size: 4518/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.662      1 -total
- 62.90%   13.626      1 Template:Userdocnavi/bg
- 16.19%    3.508      1 Template:Navigation_menu_2
- 15.64%    3.389      2 Template:Version
- 10.26%    2.222      2 Template:VersionMinus
+100.00%    9.107      1 -total
+ 66.04%    6.014      1 Template:Userdocnavi/bg
+ 28.13%    2.562      1 Template:Navigation_menu_2
+ 17.02%    1.550      2 Template:Version
+ 13.42%    1.222      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112165004 and revision id 1737535. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112165420 and revision id 1737537. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
