Created page with "* Персонализиране на FreeCAD ** [[Interface_Customization|Customizing the interface]] ** [[Preferences_Editor|Setting main preferences]] ** [[Import_Export_Preferences|Setting import-export preferences]] ** [[Start_up_and_Configuration|Start up and configuration]]"

--- a/wiki/bg/Online_Help_Toc.html
+++ b/wiki/bg/Online_Help_Toc.html
@@ -14,7 +14,7 @@
 <li><a href="../ro/Online_Help_Toc.html" class="mw-pt-progress mw-pt-progress--med" title="Help Online: Cuprins (18% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Online_Help_Toc.html" class="mw-pt-progress mw-pt-progress--low" title="Online Help Toc (6% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="../cs/Online_Help_Toc.html" class="mw-pt-progress mw-pt-progress--complete" title="Obsah online n&aacute;pov&#283;dy (100% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Online_Help_Toc.html" class="mw-pt-progress mw-pt-progress--high" title="&#1054;&#1075;&#1083;&#1072;&#1074;&#1083;&#1077;&#1085;&#1080;&#1077; (88% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Online_Help_Toc.html" class="mw-pt-progress mw-pt-progress--low" title="&#1030;&#1085;&#1090;&#1077;&#1088;&#1085;&#1077;&#1090; &#1044;&#1086;&#1087;&#1086;&#1084;&#1086;&#1075;&#1072; (12% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="../zh/Online_Help_Toc.html" class="mw-pt-progress mw-pt-progress--low" title="&#22312;&#32447;&#24110;&#21161;&#30446;&#24405; (6% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
@@ -71,13 +71,11 @@
 </div>
 <ul><li><a href="../Workarounds.html" title="Workarounds">Workarounds</a></li></ul>
 <ul><li><a href="../Tutorials.html" title="Tutorials">Tutorials</a></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>Customizing FreeCAD
+<ul><li>&#1055;&#1077;&#1088;&#1089;&#1086;&#1085;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; FreeCAD
 <ul><li><a href="../Interface_Customization.html" title="Interface Customization">Customizing the interface</a></li>
 <li><a href="../Preferences_Editor.html" title="Preferences Editor">Setting main preferences</a></li>
 <li><a href="../Import_Export_Preferences.html" title="Import Export Preferences">Setting import-export preferences</a></li>
 <li><a href="../Start_up_and_Configuration.html" title="Start up and Configuration">Start up and configuration</a></li></ul></li></ul>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><a href="../Scripting_and_macros.html" title="Scripting and macros">Python scripting</a>
 <ul><li><a href="../Macros.html" title="Macros">Working with macros</a></li>
@@ -144,30 +142,30 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112165514
+Cached time: 20260112165539
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.100 seconds
-Real time usage: 0.156 seconds
-Preprocessor visited node count: 99/1000000
+CPU time usage: 0.129 seconds
+Real time usage: 0.267 seconds
+Preprocessor visited node count: 98/1000000
 Post&#8208;expand include size: 5936/2097152 bytes
 Template argument size: 1925/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4518/5000000 bytes
+Unstrip post&#8208;expand size: 4519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.497      1 -total
- 60.33%    6.333      1 Template:Userdocnavi/bg
- 27.72%    2.910      1 Template:Navigation_menu_2
- 20.36%    2.137      2 Template:Version
- 14.65%    1.538      2 Template:VersionMinus
+100.00%   17.708      1 -total
+ 69.45%   12.299      1 Template:Userdocnavi/bg
+ 17.75%    3.144      1 Template:Navigation_menu_2
+ 16.17%    2.863      2 Template:VersionMinus
+ 10.90%    1.930      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112165513 and revision id 1737545. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112165539 and revision id 1737547. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
