Updated page Online Help Toc/bg

--- a/wiki/bg/Online_Help_Toc.html
+++ b/wiki/bg/Online_Help_Toc.html
@@ -116,8 +116,7 @@
 <li><a rel="nofollow" class="external text" href="https://freecad.org/api">API</a></li></ul></li></ul>
 <ul><li>&#1047;&#1072;&#1089;&#1083;&#1091;&#1075;&#1080;
 <ul><li><a href="../Contributors.html" title="Contributors">Contributors</a></li></ul></li></ul>
-<div class="mw-translate-fuzzy">
-</div>
+<ul><li><a href="../Glossary.html" title="Glossary">Glossary</a></li></ul>
 <p><br>
 </p>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -136,13 +135,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112165622
+Cached time: 20260112165645
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.094 seconds
-Real time usage: 0.149 seconds
-Preprocessor visited node count: 95/1000000
+CPU time usage: 0.088 seconds
+Real time usage: 0.124 seconds
+Preprocessor visited node count: 94/1000000
 Post&#8208;expand include size: 5936/2097152 bytes
 Template argument size: 1925/2097152 bytes
 Highest expansion depth: 5/100
@@ -152,14 +151,14 @@ Unstrip post&#8208;expand size: 4519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.839      1 -total
- 62.95%    5.564      1 Template:Userdocnavi/bg
- 27.99%    2.474      1 Template:Navigation_menu_2
- 17.65%    1.560      2 Template:Version
- 15.77%    1.394      2 Template:VersionMinus
+100.00%    9.036      1 -total
+ 71.36%    6.448      1 Template:Userdocnavi/bg
+ 31.65%    2.860      1 Template:Navigation_menu_2
+ 14.39%    1.300      2 Template:Version
+ 10.64%    0.961      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112165622 and revision id 1737553. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112165645 and revision id 1737555. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
