--- a/wiki/bg/Online_Help_Toc.html
+++ b/wiki/bg/Online_Help_Toc.html
@@ -24,7 +24,7 @@
 <li><a href="../ja/Online_Help_Toc.html" class="mw-pt-progress mw-pt-progress--high" title="&#12458;&#12531;&#12521;&#12452;&#12531;&#12504;&#12523;&#12503;&#30446;&#27425; (88% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Online_Help_Toc.html" class="mw-pt-progress mw-pt-progress--high" title="&#50728;&#46972;&#51064; &#46020;&#50880;&#47568; &#47785;&#52264; (94% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <p>&#1040;&#1082;&#1086; &#1080;&#1084;&#1072;&#1090;&#1077; &#1074;&#1098;&#1087;&#1088;&#1086;&#1089;&#1080; &#1080;&#1083;&#1080; &#1089;&#1077; &#1085;&#1091;&#1078;&#1076;&#1072;&#1077;&#1090;&#1077; &#1086;&#1090; &#1087;&#1086;&#1084;&#1086;&#1097; &#1079;&#1072; FreeCAD, &#1084;&#1086;&#1083;&#1103;, &#1087;&#1098;&#1088;&#1074;&#1086; &#1089;&#1077; &#1082;&#1086;&#1085;&#1089;&#1091;&#1083;&#1090;&#1080;&#1088;&#1072;&#1081;&#1090;&#1077; &#1089;&#1098;&#1089; <a href="../Help.html" title="Help">&#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072;&#1090;&#1072; &#1079;&#1072; &#1087;&#1086;&#1084;&#1086;&#1097;</a>.
-</p><p>&#1058;&#1086;&#1074;&#1072; &#1077; &#1076;&#1088;&#1091;&#1075;&#1072; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072; &#1089;&#1098;&#1089; &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;&#1090;&#1086; &#1085;&#1072; <a href="../Manual;Introduction.html" title="Manual:Introduction">FreeCAD MANUAL</a>.
+</p><p>&#1058;&#1086;&#1074;&#1072; &#1077; &#1076;&#1088;&#1091;&#1075;&#1072; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072; &#1089;&#1098;&#1089; &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072;&#1085;&#1080;&#1077;&#1090;&#1086; &#1085;&#1072; <a href="../bg/Manual;Introduction.html" title="Manual:Introduction/bg">&#1059;&#1095;&#1077;&#1073;&#1085;&#1080;&#1082; &#1079;&#1072; FreeCAD</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=Online_Help_Toc.svg&amp;filetimestamp=20240528001629&amp;.html" class="mw-file-description"><img src="../File/Online_Help_Toc.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span>
 </p>
 <ul><li>&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;
@@ -135,12 +135,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112165645
+Cached time: 20260112165825
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.088 seconds
-Real time usage: 0.124 seconds
+CPU time usage: 0.101 seconds
+Real time usage: 0.152 seconds
 Preprocessor visited node count: 94/1000000
 Post&#8208;expand include size: 5936/2097152 bytes
 Template argument size: 1925/2097152 bytes
@@ -151,14 +151,14 @@ Unstrip post&#8208;expand size: 4519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.036      1 -total
- 71.36%    6.448      1 Template:Userdocnavi/bg
- 31.65%    2.860      1 Template:Navigation_menu_2
- 14.39%    1.300      2 Template:Version
- 10.64%    0.961      2 Template:VersionMinus
+100.00%    9.163      1 -total
+ 58.81%    5.389      1 Template:Userdocnavi/bg
+ 27.02%    2.476      1 Template:Navigation_menu_2
+ 19.87%    1.821      2 Template:VersionMinus
+ 16.82%    1.541      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112165645 and revision id 1737555. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112165824 and revision id 1737557. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
