Updated page Online Help Toc/bg

--- a/wiki/bg/Online_Help_Toc.html
+++ b/wiki/bg/Online_Help_Toc.html
@@ -34,7 +34,7 @@
 <li><a href="../bg/Installing_on_Windows.html" title="Installing on Windows/bg">&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1074;  Windows</a></li>
 <li><a href="../bg/Installing_on_Linux.html" title="Installing on Linux/bg">&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1074; Linux</a></li>
 <li><a href="../bg/Installing_on_Mac.html" title="Installing on Mac/bg">&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; Mac</a></li>
-<li><a href="../Installing_additional_components.html" title="Installing additional components">&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1076;&#1086;&#1087;&#1098;&#1083;&#1085;&#1080;&#1090;&#1077;&#1083;&#1085;&#1080; &#1082;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090;&#1080;</a></li></ul></li></ul>
+<li><a href="../bg/Installing_additional_components.html" title="Installing additional components/bg">&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1076;&#1086;&#1087;&#1098;&#1083;&#1085;&#1080;&#1090;&#1077;&#1083;&#1085;&#1080; &#1082;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090;&#1080;</a></li></ul></li></ul>
 <ul><li>Working with FreeCAD
 <ul><li><a href="../Getting_started.html" title="Getting started">Getting started</a></li>
 <li><a href="../Mouse_navigation.html" title="Mouse navigation">Mouse navigation</a></li>
@@ -135,12 +135,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112170204
+Cached time: 20260112170304
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.128 seconds
-Real time usage: 0.245 seconds
+CPU time usage: 0.112 seconds
+Real time usage: 0.258 seconds
 Preprocessor visited node count: 94/1000000
 Post&#8208;expand include size: 5936/2097152 bytes
 Template argument size: 1925/2097152 bytes
@@ -151,14 +151,14 @@ Unstrip post&#8208;expand size: 4519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.002      1 -total
- 65.04%    9.107      1 Template:Userdocnavi/bg
- 29.53%    4.135      1 Template:Navigation_menu_2
- 17.19%    2.407      2 Template:Version
- 14.04%    1.966      2 Template:VersionMinus
+100.00%   20.773      1 -total
+ 45.03%    9.355      1 Template:Userdocnavi/bg
+ 39.36%    8.176      2 Template:Version
+ 13.69%    2.843      2 Template:VersionMinus
+ 11.17%    2.321      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112170204 and revision id 1737561. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112170304 and revision id 1737563. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
