--- a/wiki/bg/Mouse_navigation.html
+++ b/wiki/bg/Mouse_navigation.html
@@ -12,7 +12,7 @@
 <li><a href="../pt-br/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--med" title="Navega&ccedil;&atilde;o com mouse (24% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="Navigarea &icirc;n 3 D Modelul de Mouse (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="Mouse Model (1% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><a href="../cs/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="Model my&scaron;i (2% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
+<li><a href="../cs/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--high" title="Navigace my&scaron;&iacute; (99% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--med" title="&#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1074; 3D &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1077; (23% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="Mouse Model (1% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -1239,35 +1239,35 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251120111734
+Cached time: 20260112170624
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.410 seconds
-Real time usage: 0.532 seconds
+CPU time usage: 0.325 seconds
+Real time usage: 0.392 seconds
 Preprocessor visited node count: 1460/1000000
 Post&#8208;expand include size: 80375/2097152 bytes
 Template argument size: 19440/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3855/5000000 bytes
+Unstrip post&#8208;expand size: 3861/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   86.314      1 -total
- 13.20%   11.390      1 Template:Userdocnavi/bg
-  8.80%    7.595      8 Template:ASCII
-  6.82%    5.884      1 Template:Touchpad_Navigation/bg
-  6.34%    5.475      1 Template:Blender_Navigation/bg
-  6.15%    5.309      1 Template:Inventor_Navigation/bg
-  5.85%    5.048      1 Template:MayaGesture_Navigation/bg
-  5.25%    4.534      1 Template:CAD_Navigation/bg
-  5.14%    4.438      1 Template:Gesture_Navigation/bg
-  4.73%    4.083      1 Template:Navigation_menu_2
+100.00%   65.849      1 -total
+ 15.97%   10.513      8 Template:ASCII
+  9.67%    6.370      1 Template:Userdocnavi/bg
+  6.20%    4.081     77 Template:KEY
+  6.02%    3.966      1 Template:OpenSCAD_Navigation
+  4.56%    3.000      1 Template:OpenCascade_Navigation
+  4.55%    2.994      1 Template:Navigation_menu_2
+  4.37%    2.878      1 Template:SiemensNX_Navigation
+  4.26%    2.806      2 Template:Docnav
+  4.07%    2.678      1 Template:Blender_Navigation/bg
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77587-0!canonical and timestamp 20251120111734 and revision id 1697091. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77587-0!canonical and timestamp 20260112170624 and revision id 1697091. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
