--- a/wiki/bg/Mouse_navigation.html
+++ b/wiki/bg/Mouse_navigation.html
@@ -20,13 +20,11 @@
 <li><a href="../zh-cn/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="&#40736;&#26631;&#27169;&#24335; (2% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--med" title="&#12510;&#12454;&#12473;&#12539;&#12490;&#12499;&#12466;&#12540;&#12471;&#12519;&#12531; (25% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="Mouse&#50857; &#53456;&#49353;&#44592; (3% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Getting_started.html" title="Getting started">Getting started</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../bg/Getting_started.html" title="Getting started/bg">&#1055;&#1098;&#1088;&#1074;&#1080; &#1089;&#1090;&#1098;&#1087;&#1082;&#1080;</a></div>
     <div><a href="../Selection_methods.html" title="Selection methods">Selection methods</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../bg/Online_Help_Toc.html" title="Online Help Toc/bg">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
-</div>
 </div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -1239,15 +1237,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112170624
+Cached time: 20260112170703
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.325 seconds
-Real time usage: 0.392 seconds
-Preprocessor visited node count: 1460/1000000
-Post&#8208;expand include size: 80375/2097152 bytes
-Template argument size: 19440/2097152 bytes
+CPU time usage: 0.406 seconds
+Real time usage: 0.531 seconds
+Preprocessor visited node count: 1459/1000000
+Post&#8208;expand include size: 80408/2097152 bytes
+Template argument size: 19462/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1255,19 +1253,19 @@ Unstrip post&#8208;expand size: 3861/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   65.849      1 -total
- 15.97%   10.513      8 Template:ASCII
-  9.67%    6.370      1 Template:Userdocnavi/bg
-  6.20%    4.081     77 Template:KEY
-  6.02%    3.966      1 Template:OpenSCAD_Navigation
-  4.56%    3.000      1 Template:OpenCascade_Navigation
-  4.55%    2.994      1 Template:Navigation_menu_2
-  4.37%    2.878      1 Template:SiemensNX_Navigation
-  4.26%    2.806      2 Template:Docnav
-  4.07%    2.678      1 Template:Blender_Navigation/bg
+100.00%   95.174      1 -total
+ 13.11%   12.475      8 Template:ASCII
+  9.30%    8.855      1 Template:Userdocnavi/bg
+  5.88%    5.594     77 Template:KEY
+  5.34%    5.080      1 Template:OpenSCAD_Navigation
+  4.96%    4.717      1 Template:SiemensNX_Navigation
+  4.46%    4.240      1 Template:Blender_Navigation/bg
+  4.25%    4.049      1 Template:TinkerCAD_Navigation
+  4.06%    3.862      1 Template:OpenCascade_Navigation
+  4.01%    3.815      1 Template:Gesture_Navigation/bg
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77587-0!canonical and timestamp 20260112170624 and revision id 1697091. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77587-0!canonical and timestamp 20260112170702 and revision id 1737566. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
