--- a/wiki/bg/Mouse_navigation.html
+++ b/wiki/bg/Mouse_navigation.html
@@ -27,9 +27,9 @@
     <div><a href="../bg/Online_Help_Toc.html" title="Online Help Toc/bg">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Overview">Overview</span></h2>
-</div>
+<p><span id="Overview"></span>
+</p>
+<h2><span id=".D0.9E.D0.B1.D1.89_.D0.BF.D1.80.D0.B5.D0.B3.D0.BB.D0.B5.D0.B4"></span><span class="mw-headline" id="&#1054;&#1073;&#1097;_&#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;">&#1054;&#1073;&#1097; &#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;</span></h2>
 <div class="mw-translate-fuzzy">
 <p>&#1057;&#1090;&#1080;&#1083;&#1098;&#1090; &#1085;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1072; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;" &#1089;&#1077; &#1089;&#1098;&#1089;&#1090;&#1086;&#1080; &#1086;&#1090; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080;&#1090;&#1077; &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1090; &#1079;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1074; 3D &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086;&#1090;&#1086; &#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1072; &#1089; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077; &#1074; &#1085;&#1077;&#1075;&#1086;. FreeCAD &#1087;&#1086;&#1076;&#1098;&#1088;&#1078;&#1072; &#1085;&#1103;&#1082;&#1086;&#1083;&#1082;&#1086; &#1089;&#1090;&#1080;&#1083;&#1072; &#1085;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;. &#1057;&#1090;&#1080;&#1083;&#1098;&#1090; &#1087;&#1086;-&#1087;&#1086;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1089;&#1077; &#1085;&#1072;&#1088;&#1080;&#1095;&#1072; "CAD &#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103;," &#1080; &#1077; &#1076;&#1086;&#1089;&#1090;&#1072; &#1087;&#1088;&#1086;&#1089;&#1090; &#1080; &#1087;&#1088;&#1072;&#1082;&#1090;&#1080;&#1095;&#1077;&#1085;. FreeCAD &#1089;&#1098;&#1097;&#1086; &#1087;&#1088;&#1077;&#1076;&#1083;&#1072;&#1075;&#1072; &#1072;&#1083;&#1090;&#1077;&#1088;&#1085;&#1072;&#1090;&#1080;&#1074;&#1085;&#1080; &#1089;&#1090;&#1080;&#1083;&#1086;&#1074;&#1077; &#1079;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1073;&#1083;&#1080;&#1079;&#1082;&#1080; &#1076;&#1086; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1080;&#1090;&#1077; &#1085;&#1072; &#1076;&#1088;&#1091;&#1075;&#1080; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1080;.
 </p>
@@ -1237,12 +1237,12 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112170703
+Cached time: 20260112170748
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.406 seconds
-Real time usage: 0.531 seconds
+CPU time usage: 0.353 seconds
+Real time usage: 0.437 seconds
 Preprocessor visited node count: 1459/1000000
 Post&#8208;expand include size: 80408/2097152 bytes
 Template argument size: 19462/2097152 bytes
@@ -1253,19 +1253,19 @@ Unstrip post&#8208;expand size: 3861/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   95.174      1 -total
- 13.11%   12.475      8 Template:ASCII
-  9.30%    8.855      1 Template:Userdocnavi/bg
-  5.88%    5.594     77 Template:KEY
-  5.34%    5.080      1 Template:OpenSCAD_Navigation
-  4.96%    4.717      1 Template:SiemensNX_Navigation
-  4.46%    4.240      1 Template:Blender_Navigation/bg
-  4.25%    4.049      1 Template:TinkerCAD_Navigation
-  4.06%    3.862      1 Template:OpenCascade_Navigation
-  4.01%    3.815      1 Template:Gesture_Navigation/bg
+100.00%   68.738      1 -total
+ 16.10%   11.064      8 Template:ASCII
+  8.61%    5.920      1 Template:Userdocnavi/bg
+  6.26%    4.303      1 Template:OpenSCAD_Navigation
+  5.76%    3.960     77 Template:KEY
+  4.83%    3.318      1 Template:Blender_Navigation/bg
+  4.71%    3.237      1 Template:OpenCascade_Navigation
+  4.43%    3.047      1 Template:CAD_Navigation
+  4.15%    2.853      1 Template:SiemensNX_Navigation
+  4.04%    2.780      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77587-0!canonical and timestamp 20260112170702 and revision id 1737566. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77587-0!canonical and timestamp 20260112170748 and revision id 1737568. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
