GH link test...

--- a/wiki/Macro_Parametric_Curve_FP.html
+++ b/wiki/Macro_Parametric_Curve_FP.html
@@ -82,7 +82,7 @@ Macro Parametric_Curve_FP
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Parametric_Curve_FP screenshot&lrm;</p>
 <h3><span class="mw-headline" id="Legend">Legend</span></h3>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
-<p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://gist.github.com/mwganson/473920ad317fb2dc3e37638112874e2a/raw/7bf01aad67c3fb9033e02285bb58d95841a57143/Parametric_Curve_FP.py">Macro</a></i>
+<p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV2Objects.FCMacro">Macro</a></i>
 </p>
 <div class="mw-collapsible-content">
 <pre>
@@ -98,7 +98,7 @@ diag = QtGui.QMessageBox(QtGui.QMessageBox.Information,
     "Information",
     "This macro must be downloaded from this link\n"
     "\n"
-    "https://gist.github.com/mwganson/473920ad317fb2dc3e37638112874e2a/raw/7bf01aad67c3fb9033e02285bb58d95841a57143/Parametric_Curve_FP.py" + "\n"
+    "https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV2Objects.FCMacro" + "\n"
     "\n"
     "Quit this window to access the download page")
 
@@ -107,11 +107,11 @@ diag.setWindowModality(QtCore.Qt.ApplicationModal)
 diag.exec_()
 
 import webbrowser 
-webbrowser.open("https://gist.github.com/mwganson/473920ad317fb2dc3e37638112874e2a/raw/7bf01aad67c3fb9033e02285bb58d95841a57143/Parametric_Curve_FP.py")
+webbrowser.open("https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV2Objects.FCMacro")
 </pre>
 </div>
 </div>
-<div style="display:none;">&lt;class="rawcodeurl"&gt;&lt;a href="<a rel="nofollow" class="external free" href="https://gist.github.com/mwganson/473920ad317fb2dc3e37638112874e2a/raw/7bf01aad67c3fb9033e02285bb58d95841a57143/Parametric_Curve_FP.py">https://gist.github.com/mwganson/473920ad317fb2dc3e37638112874e2a/raw/7bf01aad67c3fb9033e02285bb58d95841a57143/Parametric_Curve_FP.py</a>"&gt;raw code&lt;/a&gt;</div>
+<div style="display:none;">&lt;class="rawcodeurl"&gt;&lt;a href="<a rel="nofollow" class="external free" href="https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV2Objects.FCMacro">https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV2Objects.FCMacro</a>"&gt;raw code&lt;/a&gt;</div>
 <p><br>
 ToolBar Icon
 <span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Parametric_Curve_FP.svg&amp;filetimestamp=20210915224114&amp;.html" class="mw-file-description"><img src="File/Parametric_Curve_FP.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
@@ -121,39 +121,39 @@ ToolBar Icon
 </p>
 <div class="plainlinks" style="width:300px; text-align:center; margin:10px auto;">
 <div style="border:1px outset #9eb4b5; background:#f0fdf8; margin:5px; padding:5px; white-space:nowrap; -webkit-border-radius: 5px; -moz-border-radius: 5px;">
-<p><span typeof="mw:File"><a href="https://gist.github.com/mwganson/473920ad317fb2dc3e37638112874e2a" rel="nofollow"><img src="File/Nuvola_apps_download_manager.png" decoding="async" width="35" height="35" class="mw-file-element" data-file-width="128" data-file-height="128"></a></span>
-</p><p><span class="CodeDownload" style="font-weight:bold"><a rel="nofollow" class="external text" href="https://gist.github.com/mwganson/473920ad317fb2dc3e37638112874e2a">Parametric_Curve_FP.py</a></span>
+<p><span typeof="mw:File"><a href="https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV2Objects.FCMacro" rel="nofollow"><img src="File/Nuvola_apps_download_manager.png" decoding="async" width="35" height="35" class="mw-file-element" data-file-width="128" data-file-height="128"></a></span>
+</p><p><span class="CodeDownload" style="font-weight:bold"><a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV2Objects.FCMacro">CSV2Objects.FCMacro</a></span>
 </p>
 </div>
 </div>
 
 <!-- 
 NewPP limit report
-Cached time: 20260107135712
+Cached time: 20260112172436
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.064 seconds
-Real time usage: 0.088 seconds
+CPU time usage: 0.061 seconds
+Real time usage: 0.071 seconds
 Preprocessor visited node count: 150/1000000
-Post&#8208;expand include size: 4688/2097152 bytes
-Template argument size: 2000/2097152 bytes
+Post&#8208;expand include size: 4605/2097152 bytes
+Template argument size: 1809/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2387/5000000 bytes
+Unstrip post&#8208;expand size: 2279/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.028      1 -total
- 30.01%    3.309      1 Template:Macro
- 20.22%    2.230      1 Template:CodeDownload
- 18.63%    2.055      1 Template:Codeextralink
- 13.81%    1.523      3 Template:Incode
- 13.63%    1.503      1 Template:Caption
+100.00%    8.030      1 -total
+ 29.81%    2.394      1 Template:Macro
+ 19.54%    1.569      1 Template:Codeextralink
+ 18.09%    1.453      1 Template:CodeDownload
+ 14.99%    1.203      3 Template:Incode
+ 12.39%    0.995      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:265038-0!canonical and timestamp 20260107135712 and revision id 1728159. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:265038-0!canonical and timestamp 20260112172443 and revision id 1737591. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
